# SearchEngine

./: CMakeLists.txt  Readme.md
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: config.json  dbase.json  file001.txt  file002.txt
resourses/: config.json  file001.txt  file002.txt  file007.txt  file008.txt  file009.txt  file010.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  SearchEngineTest.cpp
